src/app/wallet/wallet/send/send.component.scss
@import './src/assets/_config'; // import shared colors etc.

// ------ UI ------ //

.section {
  &.advanced { // 'advanced options' fields
    background: mix($color-white, $bg);
    border-top: 1px dashed darken($bg, 7%);
    margin: 0 -24px !important;
    padding: 8px 24px;
  }
}

.mat-card {
  margin-bottom: 20px;
}

.section-title { // 'Pay from/to, Convert' etc.
  @extend %subtitle;
  margin-top: 0;
}

.subtitle { // subtitles (eg. 'privacy level' in anon
  text-transform: uppercase;
  margin: 20px 0 16px;
  color: $text;
  font-weight: 700;
  small {
    color: $text-muted;
    font-weight: 400;
    font-size: inherit;
  }
}

.balance { // balance selection radio buttons
  @extend %tfx;
  padding: 8px 24px;
  margin: 0 -24px !important;
  font-family: $font;
  &:hover {
    background: $bg-hover;
  }
  &.mat-radio-checked {
    .name {
      font-weight: 700;
    }
    .desc {
      font-weight: 400;
      .amount {
        color: darken($color, 3%);
      }
    }
  }
  .name { // balance type
    font-weight: 500;
    font-size: 15px;
    margin-bottom: 1px;
    padding-left: 4px;
  }
  .desc { // available balance
    color: $text-muted;
    font-size: 11px;
    padding-left: 4px;
    .amount {
      @extend %tfx;
      color: $text-muted;
      font-weight: 600;
      margin-left: 5px;
    }
    .help-icon { // explanation of '1e-8' at blind balances (after sending all blind)
      margin-left: 3px;
      font-size: 14px;
      color: $color-info;
      line-height: 0;
      position: relative;
      top: 2px;
    }
  }
}


// ------ LAYOUT ------ //

.from-box { // 'pay from..'
  .sticky {
    position: sticky;
    top: $header-main-height + $tab-bar-height + 30px;
  }
  mat-card {
    padding-top: 14px;
  }
  .advanced {
    background: mix($bg, $color-white);
    border-top: 1px dashed darken($bg, 7%);
    margin: 8px -24px -24px;
    padding: 1px 24px;
  }
}

.privacy-level { // slider in Anon TXs
  margin: 0 0 20px;
  .privacy-label {
    font-weight: 500;
    cursor: pointer;
    &.high {
      text-align: center;
    }
    &.highest {
      text-align: right;
    }
  }
  .mat-slider {
    width: 100%;
    padding: 0;
    margin: -4px 0 -6px;
  }
}

.pay-to { // whole 'pay to' card
  padding-bottom: 1px;

  .receiver-address { // recipient's addy & label
    margin-bottom: 30px !important;
  }
  .widget-help {
    margin-top: 0;
  }
}

mat-card.to-balance-type { // 'convert to..'
  padding-top: 14px;
}

.actions {
  text-align: right;
  margin: 0;
  button {
    margin: 0 0 0 12px;
  }
}


// ------ FORMS ------ //

mat-form-field {
  &.full-width {
    width: 100%;
  }
}

.underlining-select {
  position: relative;
}

